Added lab4 solutions

--- a/01_materials/labs/lab_4.ipynb
+++ b/01_materials/labs/lab_4.ipynb
@@ -292,7 +292,99 @@
    },
    "outputs": [],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "from tensorflow.keras.initializers import Initializer\n",
+    "\n",
+    "# Define the custom kernel initializer\n",
+    "class CustomKernelInitializer(Initializer):\n",
+    "    def __call__(self, shape, dtype=None):\n",
+    "        array = np.zeros(shape=shape, dtype=\"float32\")\n",
+    "        array[:, :, 0, 0] = 1 / 25\n",
+    "        array[:, :, 1, 1] = 1 / 25\n",
+    "        array[:, :, 2, 2] = 1 / 25\n",
+    "        return array\n",
+    "    \n",
+    "conv = Conv2D(filters=3, kernel_size=(5, 5), padding=\"valid\",\n",
+    "           input_shape=(None, None, 3), kernel_initializer=CustomKernelInitializer)\n",
+    "\n",
+    "fig, (ax0, ax1) = plt.subplots(ncols=2, figsize=(10, 5))\n",
+    "ax0.imshow(img_in[0].astype('uint8'))\n",
+    "\n",
+    "img_out = conv(img_in)\n",
+    "np_img_out = img_out[0].numpy()\n",
+    "ax1.imshow(np_img_out.astype('uint8'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Kernel size: (5, 5), Padding: 'valid'\")\n",
+    "conv = Conv2D(filters=3, kernel_size=(5, 5), padding=\"valid\",\n",
+    "           input_shape=(None, None, 3), kernel_initializer=CustomKernelInitializer)\n",
+    "\n",
+    "fig, (ax0, ax1) = plt.subplots(ncols=2, figsize=(10, 5))\n",
+    "ax0.imshow(img_in[0].astype('uint8'))\n",
+    "\n",
+    "img_out = conv(img_in)\n",
+    "np_img_out = img_out[0].numpy()\n",
+    "ax1.imshow(np_img_out.astype('uint8'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Kernel size: (5, 5), Padding: 'same'\")\n",
+    "conv = Conv2D(filters=3, kernel_size=(5, 5), padding=\"same\",\n",
+    "           input_shape=(None, None, 3), kernel_initializer=CustomKernelInitializer)\n",
+    "\n",
+    "fig, (ax0, ax1) = plt.subplots(ncols=2, figsize=(10, 5))\n",
+    "ax0.imshow(img_in[0].astype('uint8'))\n",
+    "\n",
+    "img_out = conv(img_in)\n",
+    "np_img_out = img_out[0].numpy()\n",
+    "ax1.imshow(np_img_out.astype('uint8'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Kernel size: (3, 3), Padding: 'same'\")\n",
+    "conv = Conv2D(filters=3, kernel_size=(3, 3), padding=\"same\",\n",
+    "           input_shape=(None, None, 3), kernel_initializer=CustomKernelInitializer)\n",
+    "\n",
+    "fig, (ax0, ax1) = plt.subplots(ncols=2, figsize=(10, 5))\n",
+    "ax0.imshow(img_in[0].astype('uint8'))\n",
+    "\n",
+    "img_out = conv(img_in)\n",
+    "np_img_out = img_out[0].numpy()\n",
+    "ax1.imshow(np_img_out.astype('uint8'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Kernel size: (3, 3), Padding: 'valid'\")\n",
+    "conv = Conv2D(filters=3, kernel_size=(3, 3), padding=\"valid\",\n",
+    "           input_shape=(None, None, 3), kernel_initializer=CustomKernelInitializer)\n",
+    "\n",
+    "fig, (ax0, ax1) = plt.subplots(ncols=2, figsize=(10, 5))\n",
+    "ax0.imshow(img_in[0].astype('uint8'))\n",
+    "\n",
+    "img_out = conv(img_in)\n",
+    "np_img_out = img_out[0].numpy()\n",
+    "ax1.imshow(np_img_out.astype('uint8'))"
    ]
   },
   {
@@ -380,6 +472,40 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define the custom_kernel function for Sobel kernel\n",
+    "def custom_kernel(shape=(3, 3, 1, 1), dtype=None):\n",
+    "    array = np.array([[-1, -2, -1],\n",
+    "                      [ 0,  0,  0],\n",
+    "                      [ 1,  2,  1]])\n",
+    "    array = array.reshape(*shape) # Reshape if needed\n",
+    "    return array\n",
+    "\n",
+    "# Define a Conv2D layer with the custom Sobel kernel\n",
+    "conv = Conv2D(filters=1, kernel_size=(3, 3), padding=\"same\",\n",
+    "              input_shape=(None, None, 1), kernel_initializer=custom_kernel)\n",
+    "\n",
+    "# Expand dimensions to match the input shape of the Conv2D layer\n",
+    "img_in = np.expand_dims(grey_sample_image, 0)\n",
+    "\n",
+    "# Apply the convolutional filter\n",
+    "img_out = conv(img_in)\n",
+    "np_img_out = img_out[0].numpy()\n",
+    "\n",
+    "# Plot the original and convolved images\n",
+    "fig, (ax0, ax1) = plt.subplots(ncols=2, figsize=(10, 5))\n",
+    "ax0.imshow(np.squeeze(grey_sample_image.astype(np.uint8)), cmap=plt.cm.gray)\n",
+    "ax0.set_title('Original Image')\n",
+    "ax1.imshow(np_img_out.astype(np.uint8), cmap=plt.cm.gray)\n",
+    "ax1.set_title('Filtered Image\\nSobel Kernel')\n",
+    "plt.show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "cyELlQJUI_fg"
@@ -390,7 +516,8 @@
     "**Exercise**\n",
     "- Use `MaxPool2D` to apply a 2x2 max pool with strides 2 to the image. What is the impact on the shape of the image?\n",
     "- Use `AvgPool2D` to apply an average pooling.\n",
-    "- Is it possible to compute a max pooling and an average pooling with well chosen kernels?"
+    "- Is it possible to compute a max pooling and an average pooling with well chosen kernels?\n",
+    "    Pooling layers like max pooling and average pooling help to simplify and emphasize the most important features in an image. Dedicated pooling layers are a simple and efficient way to do this compared to other methods."
    ]
   },
   {
@@ -411,9 +538,66 @@
     "# You can use `img_in` from above as input to the pooling layers\n",
     "\n",
     "plt.imshow(np.squeeze(grey_sample_image.astype(np.uint8)),\n",
-    "           cmap=plt.cm.gray);\n",
+    "           cmap=plt.cm.gray);\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow.keras.layers import MaxPool2D, AvgPool2D\n",
     "\n",
-    "# Your code here"
+    "# Convert the image to greyscale (repeated for clarity)\n",
+    "grey_sample_image = sample_image.mean(axis=2)\n",
+    "grey_sample_image = grey_sample_image[:, :, np.newaxis]\n",
+    "\n",
+    "# Expand dimensions to match the input shape of the pooling layers\n",
+    "img_in = np.expand_dims(grey_sample_image, 0)\n",
+    "\n",
+    "# Apply 2x2 max pooling with strides of 2\n",
+    "max_pool = MaxPool2D(pool_size=(2, 2), strides=2)\n",
+    "max_pooled_img = max_pool(img_in)\n",
+    "\n",
+    "# Convert to numpy array and squeeze to remove the extra dimension\n",
+    "np_max_pooled_img = np.squeeze(max_pooled_img[0].numpy())\n",
+    "\n",
+    "# Plot the original and max pooled images\n",
+    "fig, (ax0, ax1) = plt.subplots(ncols=2, figsize=(10, 5))\n",
+    "ax0.imshow(np.squeeze(grey_sample_image.astype(np.uint8)), cmap=plt.cm.gray)\n",
+    "ax0.set_title('Original Image')\n",
+    "ax1.imshow(np_max_pooled_img.astype(np.uint8), cmap=plt.cm.gray)\n",
+    "ax1.set_title('Max Pooled Image')\n",
+    "plt.show()\n",
+    "\n",
+    "print(\"Original shape:\", grey_sample_image.shape)\n",
+    "print(\"Max pooled shape:\", np_max_pooled_img.shape)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Apply 2x2 average pooling with strides of 2\n",
+    "avg_pool = AvgPool2D(pool_size=(2, 2), strides=2)\n",
+    "avg_pooled_img = avg_pool(img_in)\n",
+    "\n",
+    "# Convert to numpy array and squeeze to remove the extra dimension\n",
+    "np_avg_pooled_img = np.squeeze(avg_pooled_img[0].numpy())\n",
+    "\n",
+    "# Plot the original and average pooled images\n",
+    "fig, (ax0, ax1) = plt.subplots(ncols=2, figsize=(10, 5))\n",
+    "ax0.imshow(np.squeeze(grey_sample_image.astype(np.uint8)), cmap=plt.cm.gray)\n",
+    "ax0.set_title('Original Image')\n",
+    "ax1.imshow(np_avg_pooled_img.astype(np.uint8), cmap=plt.cm.gray)\n",
+    "ax1.set_title('Average Pooled Image')\n",
+    "plt.show()\n",
+    "\n",
+    "print(\"Original shape:\", grey_sample_image.shape)\n",
+    "print(\"Average pooled shape:\", np_avg_pooled_img.shape)"
    ]
   },
   {
@@ -591,7 +775,43 @@
    "source": [
     "from keras.applications.resnet50 import preprocess_input, decode_predictions\n",
     "\n",
-    "# Your code here\n"
+    "# Your code here\n",
+    "import numpy as np\n",
+    "from skimage.transform import resize\n",
+    "from tensorflow.keras.applications.resnet50 import ResNet50\n",
+    "from tensorflow.keras.applications.imagenet_utils import preprocess_input\n",
+    "from tensorflow.keras.preprocessing import image\n",
+    "\n",
+    "\n",
+    "#plt.imshow(image);\n",
+    "\n",
+    "# Load the image\n",
+    "img_path = 'images/laptop.jpeg'\n",
+    "img = image.load_img(img_path, target_size=(224, 224))\n",
+    "\n",
+    "# Convert the image to a numpy array\n",
+    "img_array = image.img_to_array(img)\n",
+    "\n",
+    "# Reshape the image to (224, 224, 3) using resize from skimage.transform\n",
+    "img_resized = resize(img_array, (224, 224, 3), anti_aliasing=True)\n",
+    "\n",
+    "# Preprocess the image using preprocess_input\n",
+    "img_preprocessed = preprocess_input(np.expand_dims(img_resized, axis=0))\n",
+    "\n",
+    "# Load the ResNet50 model\n",
+    "model = ResNet50(include_top=True, weights='imagenet')\n",
+    "model.compile(optimizer='sgd', loss='categorical_crossentropy')\n",
+    "\n",
+    "# Predict the class of the image\n",
+    "predictions = model.predict(img_preprocessed)\n",
+    "\n",
+    "# Decode the predictions\n",
+    "from tensorflow.keras.applications.resnet50 import decode_predictions\n",
+    "decoded_predictions = decode_predictions(predictions, top=3)\n",
+    "\n",
+    "# Print the predictions\n",
+    "for i, (imagenet_id, label, score) in enumerate(decoded_predictions[0]):\n",
+    "    print(f\"{i+1}: {label} ({score:.2f})\")\n"
    ]
   },
   {
@@ -668,7 +888,40 @@
     "id": "b1pXoFQgI_fk"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "from skimage.transform import resize\n",
+    "from tensorflow.keras.applications.resnet50 import ResNet50\n",
+    "from tensorflow.keras.applications.imagenet_utils import preprocess_input\n",
+    "from tensorflow.keras.preprocessing import image\n",
+    "# Load the image\n",
+    "img_path = 'images/conv.png'\n",
+    "img = image.load_img(img_path, target_size=(224, 224))\n",
+    "# Convert the image to a numpy array\n",
+    "img_array = image.img_to_array(img)\n",
+    "# Print image details\n",
+    "\n",
+    "\n",
+    "# Reshape the image to (224, 224, 3) using resize from skimage.transform\n",
+    "img_resized = resize(img, (224, 224, 3), anti_aliasing=True)\n",
+    "\n",
+    "# Preprocess the image using preprocess_input\n",
+    "img_preprocessed = preprocess_input(np.expand_dims(img_resized, axis=0))\n",
+    "\n",
+    "# Load the ResNet50 model\n",
+    "model = ResNet50(include_top=True, weights='imagenet')\n",
+    "model.compile(optimizer='sgd', loss='categorical_crossentropy')\n",
+    "\n",
+    "# Predict the class of the image\n",
+    "predictions = model.predict(img_preprocessed)\n",
+    "\n",
+    "# Decode the predictions\n",
+    "decoded_predictions = decode_predictions(predictions, top=3)\n",
+    "\n",
+    "# Print the predictions\n",
+    "for i, (imagenet_id, label, score) in enumerate(decoded_predictions[0]):\n",
+    "    print(f\"{i+1}: {label} ({score:.2f})\")"
+   ]
   }
  ],
  "metadata": {
@@ -676,7 +929,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "dsi_participant",
    "language": "python",
    "name": "python3"
   },
@@ -690,7 +943,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
